Added game-grid for index page. Services refactoring and TailwindCSS extension workaround.
